# The_German_Pronunciation_CLI_App

./: .gitignore  Cargo.toml  README.md  SPEC.md  config.toml.example
assets/: german_words.txt
src/: autocomplete.rs  config.rs  db.rs  ipa.rs  main.rs  scoring.rs  stt.rs
src/input/: insert.rs  mod.rs  mode.rs  normal.rs  repl.rs  visual.rs
src/tts/: edge.rs  mod.rs  piper.rs
